--- a/web/src/scss/style.scss
+++ b/web/src/scss/style.scss
@@ -2,3 +2,9 @@
 @import './mixins.scss';
 
 @import './global.scss';
+
+@import './blocks/site-signup.scss';
+@import './blocks/personal-view.scss';
+@import './blocks/status-circle.scss';
+@import './blocks/glyphicon.scss';
+@import './blocks/navigation.scss';
