--- a/web/src/scss/variables.scss
+++ b/web/src/scss/variables.scss
@@ -2,4 +2,6 @@ $mobile-width: 767px;
 $tablet-width: 768px;
 $desktop-width: 1200px;
 
-$color: lightgrey;
+$body-color: #f5f5f5;
+$blue-color: #007bff;
+$link-color: #9d9d9d;
