--- a/views/site/index.twig
+++ b/views/site/index.twig
@@ -1,45 +1,59 @@
-{{ set(this, 'title', 'My Yii Application') }}
+{{ set(this, 'title', 'Рабочий стол') }}
+
+{{ use('yii/widgets/Pjax') }}
 
 <div class="site-index">
 
-    <div class="jumbotron">
-        <h1>Congratulations!</h1>
-        <p class="lead">You have successfully created your Yii-powered application.</p>
-        <p><a class="btn btn-lg btn-success" href="http://www.yiiframework.com">Get started with Yii</a></p>
-    </div>
+    <div class="bg-white">
 
-    <div class="container">
         <div class="row">
-            <div class="col-lg-4">
-                <h2>Heading</h2>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat nulla pariatur.</p>
+            <div class="col-md-5 mb-4">
+                {{ pjax_begin() }}
 
-                <p><a class="btn btn-default" href="http://www.yiiframework.com/doc/">Yii Documentation &raquo;</a></p>
+                <div class="site-index__content">
+                    <div class="site-index__text" >
+                        <div class="site-index__author">{{ author }}</div>
+                        <div>{{ text }}</div>
+                    </div>
+                
+                    <div class="site-index__controll">
+                        <a href="/site/index" class="btn btn-outline-primary" id="nextText">Показать ещё</a>
+                    </div>
+                </div>
+
+                 {{ pjax_end() }}
             </div>
-            <div class="col-lg-4">
-                <h2>Heading</h2>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat nulla pariatur.</p>
-
-                <p><a class="btn btn-default" href="http://www.yiiframework.com/forum/">Yii Forum &raquo;</a></p>
-            </div>
-            <div class="col-lg-4">
-                <h2>Heading</h2>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat nulla pariatur.</p>
-
-                <p><a class="btn btn-default" href="http://www.yiiframework.com/extensions/">Yii Extensions &raquo;</a></p>
+            <div class="col-md-7">
+                <div class="site-index__media"> 
+                    <video id="example" class="site-index__video" loop="loop" muted="muted" autoplay >
+                        <source type="video/mp4" src="/uploads/video/film.mp4" >
+                    </video>
+                </div>
             </div>
         </div>
+
     </div>
 </div>
+
+{# <script src="js/drag-and-drop.js"></script> #}
+
+
+
+<style>
+    {# .video-main { 
+        position: fixed;
+        top: 0px;	
+        left: 0;
+        width: 100%;
+        z-index: -1;
+        background: #000;
+        margin-bottom: -21px;
+    }
+
+    .video-main video {
+        width: 100%;
+    } #}
+</style>
+
