--- a/web/src/scss/style.scss
+++ b/web/src/scss/style.scss
@@ -1,5 +1,6 @@
 @import './variables.scss';
 @import './mixins.scss';
+@import './fonts.scss';
 
 @import './global.scss';
 
@@ -8,3 +9,4 @@
 @import './blocks/status-circle.scss';
 @import './blocks/glyphicon.scss';
 @import './blocks/navigation.scss';
+@import './blocks/site-index.scss';
