--- a/web/src/scss/global.scss
+++ b/web/src/scss/global.scss
@@ -9,6 +9,12 @@ body {
 main {
     padding-top: 70px;
 }
+.wrap {
+    min-height: 100%;
+    height: auto;
+    margin: 0 auto -60px;
+    padding: 0 0 60px;
+}
 
 caption {
     caption-side: top;
