create partner model and CRUD templates

--- a/views/layouts/main.twig
+++ b/views/layouts/main.twig
@@ -66,6 +66,7 @@
                     {% set menuItems = [
                         {'label' : '<i class="fas fa-truck"></i> Поставщики', 'url' : ['/supplier']},
                         {'label' : '<i class="fas fa-briefcase"></i> Покупатели', 'url' : ['/customer']},
+                        {'label' : '<i class="fas fa-handshake"></i> Партнёры', 'url' : ['/partner']},
                         {'label' : '<i class="fas fa-file-alt"></i> Отчёты', 'url' : ['/report']},
                         {'label' : '<i class="fas fa-store-alt"></i> Склад', 'url' : ['/storage']}
                         
