--- a/views/partner/index.twig
+++ b/views/partner/index.twig
@@ -31,17 +31,18 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="">
 
             {{ list_view_widget({
                     'dataProvider': dataProvider,
                     'options': {
-                        'class': 'col-md-4'
+                        'class': ''
                     },
                     'itemOptions': {
-                        'class': '' 
+                        'class': 'col-md-4 mb-4' 
                     },
-                    'itemView': '_list.twig'
+                    'itemView': '_list.twig',
+                    'layout': '{summary}<div class="row"> {items} </div>'
                 })
             }}
 
