--- a/views/partner/update.twig
+++ b/views/partner/update.twig
@@ -1,21 +1,17 @@
-<?php
-
-use yii\helpers\Html;
-
+{#
 /* @var $this yii\web\View */
 /* @var $model app\models\Partner */
+#}
+{{ set(this, 'title', 'Редактирование партнёра') }}
+{{ set(this, 'params', { 'breadcrumbs' : [{ 'label' : 'Партнёры', 'url': '/partner' }, {'label' : this.title }] }) }}
 
-$this->title = 'Update Partner: ' . $model->name;
-$this->params['breadcrumbs'][] = ['label' => 'Partners', 'url' => ['index']];
-$this->params['breadcrumbs'][] = ['label' => $model->name, 'url' => ['view', 'id' => $model->id]];
-$this->params['breadcrumbs'][] = 'Update';
-?>
 <div class="partner-update">
 
-    <h1><?= Html::encode($this->title) ?></h1>
-
-    <?= $this->render('_form', [
-        'model' => $model,
-    ]) ?>
-
+    <div class="bg-white">
+    <h3>Страница редактирования партнёра</h3><hr />
+    {{ this.render('_form.twig', {
+        'model': model,
+    }) | raw }}
+    </div>
 </div>
+
