--- a/views/partner/view.twig
+++ b/views/partner/view.twig
@@ -1,52 +1,62 @@
-<?php
+{{ use('yii/widgets/DetailView') }}
 
-use yii\helpers\Html;
-use yii\widgets\DetailView;
+{{ set(this, 'title', 'Просмотр партнёра') }}
+{{ set(this, 'params', { 'breadcrumbs' : [{ 'label' : 'Партнёры', 'url': '/partner' }, {'label' : this.title }] }) }}
 
-/* @var $this yii\web\View */
-/* @var $model app\models\Partner */
-
-$this->title = $model->name;
-$this->params['breadcrumbs'][] = ['label' => 'Partners', 'url' => ['index']];
-$this->params['breadcrumbs'][] = $this->title;
-\yii\web\YiiAsset::register($this);
-?>
 <div class="partner-view">
 
-    <h1><?= Html::encode($this->title) ?></h1>
+    <div class="bg-white mb-4">
+        <p>
+            {{ html.a('Редактировать', path('update', {'id': model.id}), {
+                class: 'btn btn-outline-primary mr-2'
+            }) | raw }}
+            {{ html.a('Удалить', path('delete', {'id': model.id}), {
+                class: 'btn btn-outline-danger',
+                data: {
+                    confirm: 'Вы уверены что хотите удалить данную запись?',
+                    method: 'post'
+                }
+            }) | raw }}
+        </p>
+    </div>
 
-    <p>
-        <?= Html::a('Update', ['update', 'id' => $model->id], ['class' => 'btn btn-primary']) ?>
-        <?= Html::a('Delete', ['delete', 'id' => $model->id], [
-            'class' => 'btn btn-danger',
-            'data' => [
-                'confirm' => 'Are you sure you want to delete this item?',
-                'method' => 'post',
-            ],
-        ]) ?>
-    </p>
+    <div class="bg-white">
 
-    <?= DetailView::widget([
-        'model' => $model,
-        'attributes' => [
-            'id',
-            'name',
-            'phone',
-            'email:email',
-            'director_name',
-            'contact_name',
-            'site',
-            'inn',
-            'kpp',
-            'account_number',
-            'address',
-            'legal_address',
-            'comment:ntext',
-            'created_by',
-            'updated_by',
-            'created_at',
-            'updated_at',
-        ],
-    ]) ?>
+        {{ detail_view_widget({
+                'model': model,
+                'options': {
+                    'class': 'table table-sm table-bordered' 
+                },
+                'attributes': [
+                    'id',
+                    'name',
+                    'phone',
+                    'email:email',
+                    'director_name',
+                    'contact_name',
+                    'site',
+                    'inn',
+                    'kpp',
+                    'account_number',
+                    'address',
+                    'legal_address',
+                    'comment:ntext',
+                    'created_by',
+                    'updated_by',
+                    {'attribute': 'created_at', 'format': ['date', 'php:d.m.Y H:i:s']},
+                    {'attribute': 'updated_at', 'format': ['date', 'php:d.m.Y H:i:s']},
+                ],
+            }) 
+        }}
 
+    </div>
 </div>
+
+
+
+
+
+
+
+
+
