--- a/views/profile/users.twig
+++ b/views/profile/users.twig
@@ -26,7 +26,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="profile/create" class="btn btn-outline-success d-md-none w-100" >Создать пользователя</a>
+                <a href="/profile/create" class="btn btn-outline-success d-md-none w-100" >Создать пользователя</a>
             </div>
         </div>
     </div>
