--- a/views/supplier/index.twig
+++ b/views/supplier/index.twig
@@ -26,7 +26,7 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <a href="supplier/create" class="btn btn-outline-success d-md-none w-100" >Создать пользователя</a>
+                    <a href="/supplier/create" class="btn btn-outline-success d-md-none w-100" >Добавить поставщика</a>
                 </div>
             </div>
         </div>
