--- a/views/supplier/index.twig
+++ b/views/supplier/index.twig
@@ -46,7 +46,7 @@
                         
                         {'attribute': 'date', 'format': ['date', 'php:d.m.Y']},
                         'product_id',
-                        'partner_id',
+                        'partner.name',
                         'bill',
                         'count',
                         'price',
