create order page and templates

--- a/views/order/_search.twig
+++ b/views/order/_search.twig
@@ -1,12 +1,12 @@
 {#
 /* @var $this yii\web\View */
-/* @var $model app\models\SupplierSearch */
+/* @var $model app\models\OrderSearch */
 /* @var $form yii\widgets\ActiveForm */
 #}
 
 {{ use('yii/bootstrap4/ActiveForm') }}
 
-<div class="supplier-search">
+<div class="order-search">
 
     {% set form = active_form_begin({
         'action': '/supplier',
