--- a/views/layouts/main.twig
+++ b/views/layouts/main.twig
@@ -65,7 +65,7 @@
                     <nav class="nav d-none d-md-block sidebar">
                     {% set menuItems = [
                         {'label' : '<i class="fas fa-truck"></i> Поставщики', 'url' : ['/supplier']},
-                        {'label' : '<i class="fas fa-briefcase"></i> Покупатели', 'url' : ['/customer']},
+                        {'label' : '<i class="fas fa-briefcase"></i> Заказы', 'url' : ['/order']},
                         {'label' : '<i class="fas fa-handshake"></i> Партнёры', 'url' : ['/partner']},
                         {'label' : '<i class="fas fa-file-alt"></i> Отчёты', 'url' : ['/report']},
                         {'label' : '<i class="fas fa-store-alt"></i> Склад', 'url' : ['/storage']}
