--- a/web/src/scss/style.scss
+++ b/web/src/scss/style.scss
@@ -10,4 +10,5 @@
 @import './blocks/glyphicon.scss';
 @import './blocks/navigation.scss';
 @import './blocks/site-index.scss';
+@import './blocks/switch.scss';
 
