create product model and templates

--- a/views/layouts/main.twig
+++ b/views/layouts/main.twig
@@ -68,6 +68,7 @@
                         {'label' : '<i class="fas fa-briefcase"></i> Заказы', 'url' : ['/order']},
                         {'label' : '<i class="fas fa-handshake"></i> Партнёры', 'url' : ['/partner']},
                         {'label' : '<i class="fas fa-file-alt"></i> Отчёты', 'url' : ['/report']},
+                        {'label' : '<i class="fas fa-apple-alt"></i> Товары', 'url' : ['/product']},
                         {'label' : '<i class="fas fa-store-alt"></i> Склад', 'url' : ['/storage']}
                         
                     ] %}
