--- a/views/supplier/index.twig
+++ b/views/supplier/index.twig
@@ -17,7 +17,13 @@
         <div class="bg-white mb-4">
             <div class="row">
                 <div class="col-md-8"> 
-                    <button class="btn btn-outline-success d-none d-md-block" data-toggle="modal" data-target="#createSupplier">Добавить поставщика</button>
+                    {% if model.products and model.partners %}
+                        <button class="btn btn-outline-success d-none d-md-block" data-toggle="modal" data-target="#createSupplier">Добавить поставщика</button>
+                    {% else %}
+                        <div class="alert alert-primary" role="alert">
+                            Для добавления поставщика необходимо создать {{ model.partners ? 'товары' : model.products ? 'партнёров' : 'товары и партнёров' }}
+                        </div>
+                    {% endif %}
                 </div>
                 <div class="col-md-4"> 
                     {{ this.render('_search.twig', {model: searchModel}) | raw}}
@@ -26,7 +32,9 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <a href="/supplier/create" class="btn btn-outline-success d-md-none w-100" >Добавить поставщика</a>
+                    {% if model.products and model.partners %}
+                        <a href="/supplier/create" class="btn btn-outline-success d-md-none w-100" >Добавить поставщика</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -45,8 +53,8 @@
                         {'class': 'yii\\grid\\SerialColumn'},
                         
                         {'attribute': 'date', 'format': ['date', 'php:d.m.Y']},
-                        'product_id',
                         'partner.name',
+                        'product.name',
                         'bill',
                         'count',
                         'price',
